исправил ошибки с 1го коммита

--- a/index.html
+++ b/index.html
@@ -55,14 +55,16 @@
     </header>
 
     <main>
-      <div class="container hero-container">
-        <section class="hero">
+      <section class="hero">
+        <div class="container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
           <button type="button" class="main-btn btn-light hero-text">
             Заказать услугу
           </button>
-        </section>
-        <section class="section">
+        </div>
+      </section>
+      <section class="section">
+        <div class="container">
           <h2 class="visually-hidden">Наши особенности</h2>
           <ul class="list">
             <li>
@@ -94,94 +96,104 @@
               </p>
             </li>
           </ul>
-        </section>
-      </div>
+        </div>
+      </section>
       <div class="container">
         <section>
-          <h2 class="desc-title">Чем мы занимаемся</h2>
-          <ul class="list">
-            <li>
-              <img
-                src="./images/img1.jpg"
-                alt="программирование и вёрстка"
-                width="370"
-              />
-            </li>
-            <li>
-              <img
-                src="./images/img2.jpg"
-                alt="работа с мобильными приложениями"
-                width="370"
-              />
-            </li>
-            <li>
-              <img
-                src="./images/img3.jpg"
-                alt="работа с цветовой гаммой"
-                width="370"
-              />
-            </li>
-          </ul>
+          <div class="container">
+            <h2 class="desc-title">Чем мы занимаемся</h2>
+            <ul class="list">
+              <li>
+                <img
+                  src="./images/img1.jpg"
+                  alt="программирование и вёрстка"
+                  width="370"
+                />
+              </li>
+              <li>
+                <img
+                  src="./images/img2.jpg"
+                  alt="работа с мобильными приложениями"
+                  width="370"
+                />
+              </li>
+              <li>
+                <img
+                  src="./images/img3.jpg"
+                  alt="работа с цветовой гаммой"
+                  width="370"
+                />
+              </li>
+            </ul>
+          </div>
         </section>
       </div>
       <section>
-        <h2 class="desc-title">Наша команда</h2>
-        <ul class="list">
-          <li>
-            <img
-              src="./images/img4.jpg"
-              alt="фото Игоря Демьяненко"
-              width="270"
-            />
-            <h3 class="desc-title-text">Игорь Демьяненко</h3>
-            <p lang="en" class="desc-text">Product Designer</p>
-          </li>
+        <div class="container">
+          <h2 class="desc-title">Наша команда</h2>
+          <ul class="list">
+            <li>
+              <img
+                src="./images/img4.jpg"
+                alt="фото Игоря Демьяненко"
+                width="270"
+              />
+              <h3 class="desc-title-text">Игорь Демьяненко</h3>
+              <p lang="en" class="desc-text">Product Designer</p>
+            </li>
 
-          <li>
-            <img src="./images/img5.jpg" alt="фото Ольги Репиной" width="270" />
-            <h3 class="desc-title-text">Ольга Репина</h3>
-            <p lang="en" class="desc-text">Frontend Developer</p>
-          </li>
-          <li>
-            <img
-              src="./images/img6.jpg"
-              alt="фото Николая Тарасова"
-              width="270"
-            />
-            <h3 class="desc-title-text">Николай Тарасов</h3>
-            <p lang="en" class="desc-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/img7.jpg"
-              alt="фото Михаила Ермакова"
-              width="270"
-            />
-            <h3 class="desc-title-text">Михаил Ермаков</h3>
-            <p lang="en" class="desc-text">UI Designer</p>
-          </li>
-        </ul>
+            <li>
+              <img
+                src="./images/img5.jpg"
+                alt="фото Ольги Репиной"
+                width="270"
+              />
+              <h3 class="desc-title-text">Ольга Репина</h3>
+              <p lang="en" class="desc-text">Frontend Developer</p>
+            </li>
+            <li>
+              <img
+                src="./images/img6.jpg"
+                alt="фото Николая Тарасова"
+                width="270"
+              />
+              <h3 class="desc-title-text">Николай Тарасов</h3>
+              <p lang="en" class="desc-text">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/img7.jpg"
+                alt="фото Михаила Ермакова"
+                width="270"
+              />
+              <h3 class="desc-title-text">Михаил Ермаков</h3>
+              <p lang="en" class="desc-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a lang="en" href="./" class="header-logo link"
-        >Web<span class="white-color">Studio</span></a
-      >
-      <address class="address white-color">
-        г. Киев, пр-т Леси Украинки, 26
-      </address>
-      <ul class="list">
-        <li>
-          <a href="mailto:info@example.com" class="footer-mail link"
-            >info@example.com</a
-          >
-        </li>
-        <li>
-          <a href="tel:+380991111111" class="footer-tele link"
-            >+38 099 111 11 11</a
-          >
-        </li>
-      </ul>
+      <div class="container">
+        <a lang="en" href="./" class="header-logo link"
+          >Web<span class="white-color">Studio</span></a
+        >
+        <address class="address white-color">
+          г. Киев, пр-т Леси Украинки, 26
+        </address>
+        <ul class="list">
+          <li>
+            <a href="mailto:info@example.com" class="footer-mail link"
+              >info@example.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+380991111111" class="footer-tele link"
+              >+38 099 111 11 11</a
+            >
+          </li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
