--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     </header>
 
     <main>
-      <section class="hero">
-        <div class="container">
+      <section class="hero section">
+        <div class="hero-container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
           <button type="button" class="main-btn btn-light hero-text">
             Заказать услугу
@@ -66,7 +66,7 @@
       <section class="section">
         <div class="container">
           <h2 class="visually-hidden">Наши особенности</h2>
-          <ul class="list">
+          <ul class="list section-features">
             <li>
               <h3 class="section-title">Внимание к деталям</h3>
               <p class="section-text">
@@ -99,25 +99,25 @@
         </div>
       </section>
       <div class="container">
-        <section>
+        <section class="section">
           <div class="container">
             <h2 class="desc-title">Чем мы занимаемся</h2>
-            <ul class="list">
-              <li>
+            <ul class="list desc-img">
+              <li class="desc-img-title">
                 <img
                   src="./images/img1.jpg"
                   alt="программирование и вёрстка"
                   width="370"
                 />
               </li>
-              <li>
+              <li class="desc-img-title">
                 <img
                   src="./images/img2.jpg"
                   alt="работа с мобильными приложениями"
                   width="370"
                 />
               </li>
-              <li>
+              <li class="desc-img-title">
                 <img
                   src="./images/img3.jpg"
                   alt="работа с цветовой гаммой"
@@ -128,7 +128,7 @@
           </div>
         </section>
       </div>
-      <section>
+      <section class="section">
         <div class="container">
           <h2 class="desc-title">Наша команда</h2>
           <ul class="list">
