--- a/portfolio.html
+++ b/portfolio.html
@@ -25,13 +25,17 @@
             >Web<span class="dark-color">Studio</span></a
           >
           <ul class="list menu-list">
-            <li class="menu-item"><a class="menu-link link" href="./index.html">Студия</a></li>
+            <li class="menu-item">
+              <a class="menu-link link" href="./index.html">Студия</a>
+            </li>
             <li class="menu-item">
               <a class="menu-link link current" href="/portfolio.html"
                 >Портфолио</a
               >
             </li>
-            <li class="menu-item"><a class="menu-link link" href="">Контакты</a></li>
+            <li class="menu-item">
+              <a class="menu-link link" href="">Контакты</a>
+            </li>
           </ul>
         </nav>
         <ul class="list header-connect">
@@ -49,137 +53,141 @@
       </div>
     </header>
     <main>
-      <section>
-        <ul class="list">
-          <li><button type="button" class="portfolio-btn">Все</button></li>
-          <li>
-            <button type="button" class="portfolio-btn">Веб-сайты</button>
-          </li>
-          <li>
-            <button type="button" class="portfolio-btn">Приложения</button>
-          </li>
-          <li><button type="button" class="portfolio-btn">Дизайн</button></li>
-          <li>
-            <button type="button" class="portfolio-btn">Маркетинг</button>
-          </li>
-        </ul>
-        <ul class="list">
-          <li>
-            <img
-              src="./images/portfolio/portfolio1.jpg"
-              alt="наши люди имеют значение"
-              width="370"
-              height="294"
-            />
-            <h3 class="portfolio-title">Технокряк</h3>
-            <p class="portfolio-title-text">Веб-сайт</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolio/portfolio2.jpg"
-              alt="соревнование в баскетбол"
-              width="370"
-              height="294"
-            />
-            <h3 class="portfolio-title">Постер New Orlean vs Golden Star</h3>
-            <p class="portfolio-title-text">Дизайн</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolio/portfolio3.jpg"
-              alt="марка ресторана сиафуд"
-              width="370"
-              height="294"
-            />
-            <h3 class="portfolio-title">Ресторан Seafood</h3>
-            <p class="portfolio-title-text">Приложение</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolio/portfolio4.jpg"
-              alt="наушники"
-              width="370"
-              height="294"
-            />
-            <h3 class="portfolio-title">Проект Prime</h3>
-            <p class="portfolio-title-text">Маркетинг</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolio/portfolio5.jpg"
-              alt="проект boxes"
-              width="370"
-              height="294"
-            />
-            <h3 class="portfolio-title">Проект Boxes</h3>
-            <p class="portfolio-title-text">Приложение</p>
-          </li>
-          <li>
-            <img
-              lang="en"
-              src="./images/portfolio/portfolio6.jpg"
-              alt="inspiration has no borders"
-              width="370"
-              height="294"
-            />
-            <h3 lang="en" class="portfolio-title">
-              Inspiration has no Borders
-            </h3>
-            <p class="portfolio-title-text">Веб-сайт</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolio/portfolio7.jpg"
-              alt="журнал"
-              width="370"
-              height="294"
-            />
-            <h3 class="portfolio-title">Издание Limited Edition</h3>
-            <p class="portfolio-title-text">Дизайн</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolio/portfolio8.jpg"
-              alt="проект lab"
-              width="370"
-              height="294"
-            />
-            <h3 class="portfolio-title">Проект LAB</h3>
-            <p class="portfolio-title-text">Маркетинг</p>
-          </li>
-          <li>
-            <img
-              lang="en"
-              src="./images/portfolio/portfolio9.jpg"
-              alt="growing business"
-              width="370"
-              height="294"
-            />
-            <h3 lang="en" class="portfolio-title">Growing Business</h3>
-            <p class="portfolio-title-text">Приложение</p>
-          </li>
-        </ul>
+      <section class="section">
+        <div class="container">
+          <ul class="list">
+            <li><button type="button" class="portfolio-btn">Все</button></li>
+            <li>
+              <button type="button" class="portfolio-btn">Веб-сайты</button>
+            </li>
+            <li>
+              <button type="button" class="portfolio-btn">Приложения</button>
+            </li>
+            <li><button type="button" class="portfolio-btn">Дизайн</button></li>
+            <li>
+              <button type="button" class="portfolio-btn">Маркетинг</button>
+            </li>
+          </ul>
+          <ul class="list">
+            <li>
+              <img
+                src="./images/portfolio/portfolio1.jpg"
+                alt="наши люди имеют значение"
+                width="370"
+                height="294"
+              />
+              <h3 class="portfolio-title">Технокряк</h3>
+              <p class="portfolio-title-text">Веб-сайт</p>
+            </li>
+            <li>
+              <img
+                src="./images/portfolio/portfolio2.jpg"
+                alt="соревнование в баскетбол"
+                width="370"
+                height="294"
+              />
+              <h3 class="portfolio-title">Постер New Orlean vs Golden Star</h3>
+              <p class="portfolio-title-text">Дизайн</p>
+            </li>
+            <li>
+              <img
+                src="./images/portfolio/portfolio3.jpg"
+                alt="марка ресторана сиафуд"
+                width="370"
+                height="294"
+              />
+              <h3 class="portfolio-title">Ресторан Seafood</h3>
+              <p class="portfolio-title-text">Приложение</p>
+            </li>
+            <li>
+              <img
+                src="./images/portfolio/portfolio4.jpg"
+                alt="наушники"
+                width="370"
+                height="294"
+              />
+              <h3 class="portfolio-title">Проект Prime</h3>
+              <p class="portfolio-title-text">Маркетинг</p>
+            </li>
+            <li>
+              <img
+                src="./images/portfolio/portfolio5.jpg"
+                alt="проект boxes"
+                width="370"
+                height="294"
+              />
+              <h3 class="portfolio-title">Проект Boxes</h3>
+              <p class="portfolio-title-text">Приложение</p>
+            </li>
+            <li>
+              <img
+                lang="en"
+                src="./images/portfolio/portfolio6.jpg"
+                alt="inspiration has no borders"
+                width="370"
+                height="294"
+              />
+              <h3 lang="en" class="portfolio-title">
+                Inspiration has no Borders
+              </h3>
+              <p class="portfolio-title-text">Веб-сайт</p>
+            </li>
+            <li>
+              <img
+                src="./images/portfolio/portfolio7.jpg"
+                alt="журнал"
+                width="370"
+                height="294"
+              />
+              <h3 class="portfolio-title">Издание Limited Edition</h3>
+              <p class="portfolio-title-text">Дизайн</p>
+            </li>
+            <li>
+              <img
+                src="./images/portfolio/portfolio8.jpg"
+                alt="проект lab"
+                width="370"
+                height="294"
+              />
+              <h3 class="portfolio-title">Проект LAB</h3>
+              <p class="portfolio-title-text">Маркетинг</p>
+            </li>
+            <li>
+              <img
+                lang="en"
+                src="./images/portfolio/portfolio9.jpg"
+                alt="growing business"
+                width="370"
+                height="294"
+              />
+              <h3 lang="en" class="portfolio-title">Growing Business</h3>
+              <p class="portfolio-title-text">Приложение</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a lang="en" href="./" class="header-logo link"
-        >Web<span class="white-color">Studio</span></a
-      >
-      <address class="address white-color">
-        г. Киев, пр-т Леси Украинки, 26
-      </address>
-      <ul class="list">
-        <li>
-          <a href="mailto:info@example.com" class="footer-mail link"
-            >info@example.com</a
-          >
-        </li>
-        <li>
-          <a href="tel:+380991111111" class="footer-tele link"
-            >+38 099 111 11 11</a
-          >
-        </li>
-      </ul>
+      <div class="container">
+        <a lang="en" href="./" class="header-logo link"
+          >Web<span class="white-color">Studio</span></a
+        >
+        <address class="address white-color">
+          г. Киев, пр-т Леси Украинки, 26
+        </address>
+        <ul class="list">
+          <li>
+            <a href="mailto:info@example.com" class="footer-mail link"
+              >info@example.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+380991111111" class="footer-tele link"
+              >+38 099 111 11 11</a
+            >
+          </li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
