--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <main>
       <section class="hero section">
-        <div class="hero-container">
+        <div class="container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
           <button type="button" class="main-btn btn-light hero-text">
             Заказать услугу
