начал оформлять футер

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </header>
 
     <main>
-      <section class="hero section">
+      <section class="hero">
         <div class="container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
           <button type="button" class="main-btn btn-light hero-text">
@@ -131,8 +131,8 @@
       <section class="section">
         <div class="container">
           <h2 class="desc-title">Наша команда</h2>
-          <ul class="list">
-            <li>
+          <ul class="list desc-img">
+            <li class="desc-img-title desc-img-border">
               <img
                 src="./images/img4.jpg"
                 alt="фото Игоря Демьяненко"
@@ -142,7 +142,7 @@
               <p lang="en" class="desc-text">Product Designer</p>
             </li>
 
-            <li>
+            <li class="desc-img-title desc-img-border">
               <img
                 src="./images/img5.jpg"
                 alt="фото Ольги Репиной"
@@ -151,7 +151,7 @@
               <h3 class="desc-title-text">Ольга Репина</h3>
               <p lang="en" class="desc-text">Frontend Developer</p>
             </li>
-            <li>
+            <li class="desc-img-title desc-img-border">
               <img
                 src="./images/img6.jpg"
                 alt="фото Николая Тарасова"
@@ -160,7 +160,7 @@
               <h3 class="desc-title-text">Николай Тарасов</h3>
               <p lang="en" class="desc-text">Marketing</p>
             </li>
-            <li>
+            <li class="desc-img-title desc-img-border">
               <img
                 src="./images/img7.jpg"
                 alt="фото Михаила Ермакова"
@@ -175,7 +175,7 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a lang="en" href="./" class="header-logo link"
+        <a lang="en" href="./" class="footer-logo link"
           >Web<span class="white-color">Studio</span></a
         >
         <address class="address white-color">
