Закончил первую страничку

--- a/index.html
+++ b/index.html
@@ -103,21 +103,21 @@
           <div class="container">
             <h2 class="desc-title">Чем мы занимаемся</h2>
             <ul class="list desc-img">
-              <li class="desc-img-title">
+              <li class="desc-img-item">
                 <img
                   src="./images/img1.jpg"
                   alt="программирование и вёрстка"
                   width="370"
                 />
               </li>
-              <li class="desc-img-title">
+              <li class="desc-img-item">
                 <img
                   src="./images/img2.jpg"
                   alt="работа с мобильными приложениями"
                   width="370"
                 />
               </li>
-              <li class="desc-img-title">
+              <li class="desc-img-item">
                 <img
                   src="./images/img3.jpg"
                   alt="работа с цветовой гаммой"
@@ -178,16 +178,16 @@
         <a lang="en" href="./" class="footer-logo link"
           >Web<span class="white-color">Studio</span></a
         >
-        <address class="address white-color">
+        <address class="footer-address white-color">
           г. Киев, пр-т Леси Украинки, 26
         </address>
-        <ul class="list">
-          <li>
+        <ul class="list connect">
+          <li class="footer-connect">
             <a href="mailto:info@example.com" class="footer-mail link"
               >info@example.com</a
             >
           </li>
-          <li>
+          <li class="footer-connect">
             <a href="tel:+380991111111" class="footer-tele link"
               >+38 099 111 11 11</a
             >
