--- a/portfolio.html
+++ b/portfolio.html
@@ -172,7 +172,7 @@
         <a lang="en" href="./" class="header-logo link"
           >Web<span class="white-color">Studio</span></a
         >
-        <address class="address white-color">
+        <address class="footer-address white-color">
           г. Киев, пр-т Леси Украинки, 26
         </address>
         <ul class="list">
