--- a/index.html
+++ b/index.html
@@ -67,67 +67,65 @@
         <div class="container">
           <h2 class="visually-hidden">Наши особенности</h2>
           <ul class="list section-features">
-            <li>
+            <li class="section-title-text">
               <h3 class="section-title">Внимание к деталям</h3>
               <p class="section-text">
-                Идейные соображения, а такженачало повседневной работы по
+                Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li>
+            <li class="section-title-text">
               <h3 class="section-title">Пунктуальность</h3>
               <p class="section-text">
-                Задача организации, в особенностиже рамки и место обучения
+                Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li>
+            <li class="section-title-text">
               <h3 class="section-title">Планирование</h3>
               <p class="section-text">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li>
+            <li class="section-title-text">
               <h3 class="section-title">Современные технологии</h3>
               <p class="section-text">
-                начимость этих проблем настолько очевидна, что реализация
+                Значимость этих проблем настолько очевидна, что реализация
                 плановых заданий.
               </p>
             </li>
           </ul>
         </div>
       </section>
-      <div class="container">
-        <section class="section">
-          <div class="container">
-            <h2 class="desc-title">Чем мы занимаемся</h2>
-            <ul class="list desc-img">
-              <li class="desc-img-item">
-                <img
-                  src="./images/img1.jpg"
-                  alt="программирование и вёрстка"
-                  width="370"
-                />
-              </li>
-              <li class="desc-img-item">
-                <img
-                  src="./images/img2.jpg"
-                  alt="работа с мобильными приложениями"
-                  width="370"
-                />
-              </li>
-              <li class="desc-img-item">
-                <img
-                  src="./images/img3.jpg"
-                  alt="работа с цветовой гаммой"
-                  width="370"
-                />
-              </li>
-            </ul>
-          </div>
-        </section>
-      </div>
+      <section class="section">
+        <div class="container">
+          <h2 class="desc-title">Чем мы занимаемся</h2>
+          <ul class="list desc-img">
+            <li class="desc-img-item">
+              <img
+                src="./images/img1.jpg"
+                alt="программирование и вёрстка"
+                width="370"
+              />
+            </li>
+            <li class="desc-img-item">
+              <img
+                src="./images/img2.jpg"
+                alt="работа с мобильными приложениями"
+                width="370"
+              />
+            </li>
+            <li class="desc-img-item">
+              <img
+                src="./images/img3.jpg"
+                alt="работа с цветовой гаммой"
+                width="370"
+              />
+            </li>
+          </ul>
+        </div>
+      </section>
       <section class="section">
         <div class="container">
           <h2 class="desc-title">Наша команда</h2>
@@ -138,8 +136,10 @@
                 alt="фото Игоря Демьяненко"
                 width="270"
               />
-              <h3 class="desc-title-text">Игорь Демьяненко</h3>
-              <p lang="en" class="desc-text">Product Designer</p>
+              <div class="desc-person">
+                <h3 class="desc-title-text">Игорь Демьяненко</h3>
+                <p lang="en" class="desc-text">Product Designer</p>
+              </div>
             </li>
 
             <li class="desc-img-title desc-img-border">
@@ -148,8 +148,10 @@
                 alt="фото Ольги Репиной"
                 width="270"
               />
-              <h3 class="desc-title-text">Ольга Репина</h3>
-              <p lang="en" class="desc-text">Frontend Developer</p>
+              <div class="desc-person">
+                <h3 class="desc-title-text">Ольга Репина</h3>
+                <p lang="en" class="desc-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="desc-img-title desc-img-border">
               <img
@@ -157,8 +159,10 @@
                 alt="фото Николая Тарасова"
                 width="270"
               />
-              <h3 class="desc-title-text">Николай Тарасов</h3>
-              <p lang="en" class="desc-text">Marketing</p>
+              <div class="desc-person">
+                <h3 class="desc-title-text">Николай Тарасов</h3>
+                <p lang="en" class="desc-text">Marketing</p>
+              </div>
             </li>
             <li class="desc-img-title desc-img-border">
               <img
@@ -166,8 +170,10 @@
                 alt="фото Михаила Ермакова"
                 width="270"
               />
-              <h3 class="desc-title-text">Михаил Ермаков</h3>
-              <p lang="en" class="desc-text">UI Designer</p>
+              <div class="desc-person">
+                <h3 class="desc-title-text">Михаил Ермаков</h3>
+                <p lang="en" class="desc-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -181,7 +187,7 @@
         <address class="footer-address white-color">
           г. Киев, пр-т Леси Украинки, 26
         </address>
-        <ul class="list connect">
+        <ul class="list">
           <li class="footer-connect">
             <a href="mailto:info@example.com" class="footer-mail link"
               >info@example.com</a
