--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
     <main>
       <section class="section">
         <div class="container">
-          <ul class="list">
+          <ul class="list portfolio-nav">
             <li><button type="button" class="portfolio-btn">Все</button></li>
             <li>
               <button type="button" class="portfolio-btn">Веб-сайты</button>
