--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
     <link href="./css/styles.css" rel="stylesheet" />
   </head>
   <body>
-    <header class="header">
+     <header class="header">
       <div class="container header-container">
         <nav class="header-nav">
           <a lang="en" href="./" class="header-logo link"
@@ -29,9 +29,7 @@
               <a class="menu-link link" href="./index.html">Студия</a>
             </li>
             <li class="menu-item">
-              <a class="menu-link link current" href="/portfolio.html"
-                >Портфолио</a
-              >
+              <a class="menu-link link current" href="./portfolio.html">Портфолио</a>
             </li>
             <li class="menu-item">
               <a class="menu-link link" href="">Контакты</a>
@@ -169,19 +167,19 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a lang="en" href="./" class="header-logo link"
+        <a lang="en" href="./" class="footer-logo link"
           >Web<span class="white-color">Studio</span></a
         >
         <address class="footer-address white-color">
           г. Киев, пр-т Леси Украинки, 26
         </address>
         <ul class="list">
-          <li>
+          <li class="footer-connect">
             <a href="mailto:info@example.com" class="footer-mail link"
               >info@example.com</a
             >
           </li>
-          <li>
+          <li class="footer-connect">
             <a href="tel:+380991111111" class="footer-tele link"
               >+38 099 111 11 11</a
             >
