--- a/portfolio.html
+++ b/portfolio.html
@@ -54,15 +54,15 @@
       <section class="section">
         <div class="container">
           <ul class="list portfolio-nav">
-            <li><button type="button" class="portfolio-btn">Все</button></li>
-            <li>
+            <li class="portfolio-btn-title"><button type="button" class="portfolio-btn">Все</button></li>
+            <li class="portfolio-btn-title">
               <button type="button" class="portfolio-btn">Веб-сайты</button>
             </li>
-            <li>
+            <li class="portfolio-btn-title">
               <button type="button" class="portfolio-btn">Приложения</button>
             </li>
-            <li><button type="button" class="portfolio-btn">Дизайн</button></li>
-            <li>
+            <li class="portfolio-btn-title"><button type="button" class="portfolio-btn">Дизайн</button></li>
+            <li class="portfolio-btn-title">
               <button type="button" class="portfolio-btn">Маркетинг</button>
             </li>
           </ul>
