--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
     <link href="./css/styles.css" rel="stylesheet" />
   </head>
   <body>
-     <header class="header">
+    <header class="header">
       <div class="container header-container">
         <nav class="header-nav">
           <a lang="en" href="./" class="header-logo link"
@@ -29,7 +29,9 @@
               <a class="menu-link link" href="./index.html">Студия</a>
             </li>
             <li class="menu-item">
-              <a class="menu-link link current" href="./portfolio.html">Портфолио</a>
+              <a class="menu-link link current" href="./portfolio.html"
+                >Портфолио</a
+              >
             </li>
             <li class="menu-item">
               <a class="menu-link link" href="">Контакты</a>
@@ -54,70 +56,86 @@
       <section class="section">
         <div class="container">
           <ul class="list portfolio-nav">
-            <li class="portfolio-btn-title"><button type="button" class="portfolio-btn">Все</button></li>
+            <li class="portfolio-btn-title">
+              <button type="button" class="portfolio-btn">Все</button>
+            </li>
             <li class="portfolio-btn-title">
               <button type="button" class="portfolio-btn">Веб-сайты</button>
             </li>
             <li class="portfolio-btn-title">
               <button type="button" class="portfolio-btn">Приложения</button>
             </li>
-            <li class="portfolio-btn-title"><button type="button" class="portfolio-btn">Дизайн</button></li>
+            <li class="portfolio-btn-title">
+              <button type="button" class="portfolio-btn">Дизайн</button>
+            </li>
             <li class="portfolio-btn-title">
               <button type="button" class="portfolio-btn">Маркетинг</button>
             </li>
           </ul>
-          <ul class="list">
-            <li>
+          <ul class="list portfolio-main">
+            <li class="portfolio-main-title">
               <img
                 src="./images/portfolio/portfolio1.jpg"
                 alt="наши люди имеют значение"
                 width="370"
                 height="294"
               />
-              <h3 class="portfolio-title">Технокряк</h3>
-              <p class="portfolio-title-text">Веб-сайт</p>
+              <div class="portfolio-frame">
+                <h3 class="portfolio-title">Технокряк</h3>
+                <p class="portfolio-title-text">Веб-сайт</p>
+              </div>
             </li>
-            <li>
+            <li class="portfolio-main-title">
               <img
                 src="./images/portfolio/portfolio2.jpg"
                 alt="соревнование в баскетбол"
                 width="370"
                 height="294"
               />
-              <h3 class="portfolio-title">Постер New Orlean vs Golden Star</h3>
-              <p class="portfolio-title-text">Дизайн</p>
+              <div class="portfolio-frame">
+                <h3 class="portfolio-title">
+                  Постер New Orlean vs Golden Star
+                </h3>
+                <p class="portfolio-title-text">Дизайн</p>
+              </div>
             </li>
-            <li>
+            <li class="portfolio-main-title">
               <img
                 src="./images/portfolio/portfolio3.jpg"
                 alt="марка ресторана сиафуд"
                 width="370"
                 height="294"
               />
-              <h3 class="portfolio-title">Ресторан Seafood</h3>
-              <p class="portfolio-title-text">Приложение</p>
+              <div class="portfolio-frame">
+                <h3 class="portfolio-title">Ресторан Seafood</h3>
+                <p class="portfolio-title-text">Приложение</p>
+              </div>
             </li>
-            <li>
+            <li class="portfolio-main-title">
               <img
                 src="./images/portfolio/portfolio4.jpg"
                 alt="наушники"
                 width="370"
                 height="294"
               />
-              <h3 class="portfolio-title">Проект Prime</h3>
-              <p class="portfolio-title-text">Маркетинг</p>
+              <div class="portfolio-frame">
+                <h3 class="portfolio-title">Проект Prime</h3>
+                <p class="portfolio-title-text">Маркетинг</p>
+              </div>
             </li>
-            <li>
+            <li class="portfolio-main-title">
               <img
                 src="./images/portfolio/portfolio5.jpg"
                 alt="проект boxes"
                 width="370"
                 height="294"
               />
-              <h3 class="portfolio-title">Проект Boxes</h3>
-              <p class="portfolio-title-text">Приложение</p>
+              <div class="portfolio-frame">
+                <h3 class="portfolio-title">Проект Boxes</h3>
+                <p class="portfolio-title-text">Приложение</p>
+              </div>
             </li>
-            <li>
+            <li class="portfolio-main-title">
               <img
                 lang="en"
                 src="./images/portfolio/portfolio6.jpg"
@@ -125,32 +143,38 @@
                 width="370"
                 height="294"
               />
-              <h3 lang="en" class="portfolio-title">
-                Inspiration has no Borders
-              </h3>
-              <p class="portfolio-title-text">Веб-сайт</p>
+              <div class="portfolio-frame">
+                <h3 lang="en" class="portfolio-title">
+                  Inspiration has no Borders
+                </h3>
+                <p class="portfolio-title-text">Веб-сайт</p>
+              </div>
             </li>
-            <li>
+            <li class="portfolio-main-title">
               <img
                 src="./images/portfolio/portfolio7.jpg"
                 alt="журнал"
                 width="370"
                 height="294"
               />
-              <h3 class="portfolio-title">Издание Limited Edition</h3>
-              <p class="portfolio-title-text">Дизайн</p>
+              <div class="portfolio-frame">
+                <h3 class="portfolio-title">Издание Limited Edition</h3>
+                <p class="portfolio-title-text">Дизайн</p>
+              </div>
             </li>
-            <li>
+            <li class="portfolio-main-title">
               <img
                 src="./images/portfolio/portfolio8.jpg"
                 alt="проект lab"
                 width="370"
                 height="294"
               />
-              <h3 class="portfolio-title">Проект LAB</h3>
-              <p class="portfolio-title-text">Маркетинг</p>
+              <div class="portfolio-frame">
+                <h3 class="portfolio-title">Проект LAB</h3>
+                <p class="portfolio-title-text">Маркетинг</p>
+              </div>
             </li>
-            <li>
+            <li class="portfolio-main-title">
               <img
                 lang="en"
                 src="./images/portfolio/portfolio9.jpg"
@@ -158,8 +182,10 @@
                 width="370"
                 height="294"
               />
-              <h3 lang="en" class="portfolio-title">Growing Business</h3>
-              <p class="portfolio-title-text">Приложение</p>
+              <div class="portfolio-frame">
+                <h3 lang="en" class="portfolio-title">Growing Business</h3>
+                <p class="portfolio-title-text">Приложение</p>
+              </div>
             </li>
           </ul>
         </div>
