Готовое дз с поправками

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           </ul>
         </div>
       </section>
-      <section class="section">
+      <section class="section-after-hero">
         <div class="container">
           <h2 class="desc-title">Чем мы занимаемся</h2>
           <ul class="list desc-img">
